test-cases/final-dump/trait_error_abstract_proc_detism.wybe
# Verify trait implementation determinism must match the abstract procedure.

type matcher trait {
    abstract {test} matches(x:_)
}

impl int <: matcher

def matches(x:int) {
    pass
}
